# langgraph-rut

./: .gitignore  README.md  looping.ipynb  main.py  pyproject.toml  requirements.txt  second.ipynb
notebooks/: re_act.ipynb  test.ipynb
src/: simple_bot.ipynb  simple_bot_with_memory.ipynb
src/basics/: logging.txt
src/basics/re_act/: main.py
src/basics/reflection_system/: basics.py  chains.py
src/series/: AgentBasics.py  AgentBasicsWithMemory.py  Basics.py  BasicsWithReducer.py  BasicsWithReducerPydantic.py  RAGAgentic.py  RAGBasics.py  TypedDict.py  WithTools.py
