[project]
name = "langgraph-rut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
]
